2008-10-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: add modules/pam_pwhistory/Makefile.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_pwhistory.xml.
	* doc/sag/pam_pwhistory.xml: New.
	* libpam/pam_static_modules.h: Add pam_pwhistory data.
	* modules/Makefile.am: Add pam_pwhistory directory.
	* modules/pam_pwhistory/Makefile.am: New.
	* modules/pam_pwhistory/README.xml: New.
	* modules/pam_pwhistory/opasswd.c: New.
	* modules/pam_pwhistory/opasswd.h: New.
	* modules/pam_pwhistory/pam_pwhistory.8.xml: New.
	* modules/pam_pwhistory/pam_pwhistory.c: New.
	* modules/pam_pwhistory/tst-pam_pwhistory: New.
	* xtests/Makefile.am: New.
	* xtests/run-xtests.sh: New.
	* xtests/tst-pam_pwhistory1.c: New.
	* xtests/tst-pam_pwhistory1.pamd: New.
	* xtests/tst-pam_pwhistory1.sh: New.
	* po/POTFILES.in: Add modules/pam_pwhistory/.
	* po/de.po: Update translations.

2008-10-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/de.po: Update translations.

2008-09-30  Manoj Kumar Giri <mgiri@redhat.com>

	* po/or.po: Updated translations.

2008-09-30  Sharuzzaman Ahmat Raslan <sharuzzaman@gmail.com>

	* po/ms.po: New translation to Malay.

2008-09-30  Taylon Silmer Lacerda Silva <taylonsilva@gmail.com>

	* po/pt_BR.po: Updated translations.

2008-09-30  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_lastlog/pam_lastlog.8.xml: Document new options
	noupdate and showfailed.
	* modules/pam_lastlog/pam_lastlog.c(pam_parse): Recognize the new
	options.
	(last_login_read): New output parameter lltime. Do not display
	the last login message if it would be empty.
	(last_login_date): New output parameter lltime. Do not write the
	last login info when LASTLOG_UPDATE is not set.
	(last_login_failed): New function to display the last bad login
	attempt from btmp.
	(pam_sm_open_session): Obtain lltime from last_login_date() and
	call last_login_failed() when appropriate.

	* po/Linux-pam.pot: Updated strings to translate.
	* po/*.po: Likewise.

2008-09-29  Thorsten Kukuk  <kukuk@thkukuk.de>
